manifests/base/azure-vote-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: azure-vote-front
  type: ClusterIP
