manifests/base/cybercrime-frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: cybercrime-frontend
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/content-type-nosniff: 'true'
    ingress.kubernetes.io/frame-deny: 'true'
    ingress.kubernetes.io/browser-xss-filter: 'true'
  name: cybercrime-frontend-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: cybercrime-frontend
              servicePort: 3000
            path: /
